added js functions

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 		
 		
 		<!-- link javascript code -->
-		<script type="text/javascript" src="./js/script.js"></script>
+		<script type="text/javascript" src="js/scripts.js"></script>
 
     
 	</body>
